slight overlap fixed

--- a/gui/src/sections/MapSvg/MapSvg.scss
+++ b/gui/src/sections/MapSvg/MapSvg.scss
@@ -6,9 +6,9 @@
     margin-bottom: 20px;
     box-shadow: 0 0 110px 0 inset $blue;
     width: 99vw;
-    height: 78vh;
+    height: 76vh;
     @media (min-width: $media-switch--medium) {
-      height: 80vh;
+      height: 78.5vh;
     }
   }
 
